--- a/gitea.yaml
+++ b/gitea.yaml
@@ -2,14 +2,25 @@
 - name: install gitea with sql database trough docker
   hosts: linux_machines
   become: true
+  vars:
+    # Default email that is needed for the certificates of your website
+    default_email_ssl: fleurvanbuijten@live.be
+
+    # Variables that are needed for gite and the mysql database
+    mysql_root_password: uiopuiop
+    mysql_user: gitea
+    mysql_database: gitea
+    mysql_password: uiopuiop
+    virtual_host: school.stuff.ovh # Domain name here
+    letsencrypt_host: school.stuff.ovh # Domain name here
+
   roles:
     - docker-role
   tasks:
 
-   # Run ansible-playbook -K gitea.yaml to start this ansible script, -K to ask for the password
+  # Run ansible-playbook -K gitea.yaml to start this ansible script, -K to ask for the password
 
   # For Reverse Proxy
-
     - name: Add a docker network for the proxy
       docker_network:
         name: nginx-proxy
@@ -41,7 +52,7 @@
         image: nginxproxy/acme-companion
         env:
           NGINX_PROXY_CONTAINER: rproxy
-          DEFAULT_EMAIL: fleurvanbuijten@live.be
+          DEFAULT_EMAIL: "{{ default_email_ssl }}"
         name: SSL
         networks:
           - name: nginx-proxy        
@@ -65,10 +76,10 @@
         name: MySQL
         image: mysql:8.0.33
         env: 
-          MYSQL_ROOT_PASSWORD: uiopuiop
-          MYSQL_USER: gitea
-          MYSQL_PASSWORD: uiopuiop
-          MYSQL_DATABASE: gitea
+          MYSQL_ROOT_PASSWORD: "{{ mysql_root_password }}"
+          MYSQL_USER: "{{ mysql_user }}"
+          MYSQL_PASSWORD: "{{ mysql_root_password }}"
+          MYSQL_DATABASE: "{{ mysql_database }}"
         volumes:
           - "./mysql:/var/lib/mysql"
         networks:
@@ -90,12 +101,12 @@
           USER_GID: "1000"
           GITEA__database__DB_TYPE: mysql
           GITEA__database__HOST: "MySQL:3306"
-          GITEA__database__NAME: gitea
-          GITEA__database__USER: gitea
-          GITEA__database__PASSWD: uiopuiop
-          VIRTUAL_HOST: school.stuff.ovh
+          GITEA__database__NAME: "{{ mysql_database }}"
+          GITEA__database__USER: "{{ mysql_user }}"
+          GITEA__database__PASSWD: "{{ mysql_root_password }}"
+          VIRTUAL_HOST: "{{ virtual_host }}"
           VIRTUAL_PORT: "3000"
-          LETSENCRYPT_HOST: school.stuff.ovh
+          LETSENCRYPT_HOST: "{{ letsencrypt_host }}"
         networks:
           - name: nginx-proxy
         volumes:
@@ -106,7 +117,6 @@
       tags: "container"
 
   # firewall 
-
     - name: Enable and start firewalld service
       service:
         name: firewalld
